--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:inter_transactions
+    url: jdbc:h2:mem:inter_transactions;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password: sa
     driverClassName: org.h2.Driver
@@ -16,4 +16,7 @@ spring:
         formatSql: true
   h2:
     console.enabled: true
+base:
+  url: https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v1/accounting/od/rates_of_exchange
+
 
